# function-calculation

./: CMakeLists.txt  README.md  calc.cpp  calc.h  main.cpp  main.h  test.cpp  test.h
